force-app/main/default/objects/Takeoff_Document__c/Takeoff_Document__c.object-meta.xml
<CustomObject>
    <description>Created at PO intake. Holds the entire takeoff workflow state until the Work Order is created. Inserts a verification step between PO arrival and WO creation so quantity and material variances are caught and resolved before they become billing disputes.</description>
    <label>Takeoff Document</label>
    <nameField>
        <displayFormat>TD-{YYYY}-{0000}</displayFormat>
        <label>Takeoff Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Takeoff Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>