force-app/main/default/objects/Takeoff_Document__c/fields/Variance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Variance_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Variance Flag</label>
    <type>Checkbox</type>
</CustomField>